# stay-home-ctf-2022

./: .gitignore  README.md  check.py  requirements.txt
.github/workflows/: check-services.yml
checkers/: requirements.txt
checkers/5Go/: checker.py
checkers/example/: checker.py  example_lib.py
checkers/kuar/: checker.py  kuar_lib.py
checkers/modelrna/: checker.py  mine_results.json  model_helper.py  modelrna_lib.py
checkers/sputnik_v8/: checker.py  example_lib.py
checkers/vacc_ex/: checker.py  client_lib.py  exchange_pb2_grpc.py
checkers/virush/: channel.py  checker.py  openssl.py  protocol.py
internal/5Go/: BOM.txt  Makefile  copy_bom.py  docker-compose.yml
internal/5Go/synapsis/: Cargo.toml  ffi.Dockerfile  pyo3.Dockerfile
internal/5Go/synapsis/src/: lib.rs  neurotransmitter.rs
internal/kuar/: AES.cpp  AES.h  Makefile  Protocol.cpp  Protocol.hpp  UserManager.cpp  UserManager.hpp  errs.hpp  main.cpp  main.hpp  utils.cpp  utils.hpp
services/5Go/: .gitignore  Makefile  README.md  docker-compose.yml
services/5Go/synapsis/: Cargo.toml
services/5Go/synapsis/src/: crypto.rs  ffi.h  lib.rs  neurotransmitter.rs
services/example/: Dockerfile  docker-compose.yml
services/kuar/: client.py  docker-compose.yml
services/modelrna/: Dockerfile  config.env  docker-compose.yml
services/sputnik_v8/: docker-compose.yml  run.sh
services/vacc_ex/: docker-compose.yml
services/virush/: docker-compose.yml
sploits/5Go/: README.md  genji_0day.py
sploits/example/: unprotected_read.py
sploits/kuar/: remote_sploit.py
sploits/modelrna/: README.md  (+1 more)
(+164 files in other folders)
